# OldBackend

./: .gitignore  Cargo.toml  README.md
assets/email_templates/: reset_password.html  verify_code.html
src/: main.rs  scheduler.rs  state.rs
src/auth/: mod.rs  password.rs
src/database/: mod.rs  mongo.rs
src/database/repos/: announcement_repository.rs  codes_repo.rs  comment_replies_repo.rs  comment_repo.rs  mod.rs  post_repo.rs  preuser_repo.rs  profile_repo.rs  reports_repo.rs  session_repo.rs  settings_repo.rs  user_repo.rs
src/docs/: comment_docs.rs  mod.rs  post_docs.rs  profiles_docs.rs  reporting_docs.rs  session_docs.rs  settings_docs.rs  user_docs.rs  userassets_docs.rs
src/middleware/: admin_guard.rs  auther.rs  mod.rs
src/models/: announcement.rs  character.rs  codes.rs  comment.rs  media.rs  mod.rs  post.rs  profile.rs  report.rs  session.rs  settings.rs  user.rs
src/redis/: mod.rs
src/redis/cache/: mod.rs  post_cache.rs  profile_cache.rs
src/routes/: api_test.rs  mod.rs
src/routes/admin/: admin_announcements.rs  admin_posts.rs  admin_profiles.rs  admin_reporting.rs  admin_users.rs  mod.rs
src/routes/internal/: mod.rs  profile.rs  reporting.rs  session.rs  userassets.rs
src/routes/internal/comment/: mod.rs  (+3 more)
src/services/: mod.rs  r2.rs  smtp_service.rs  watchdog.rs
src/services/internal/: announcement_service.rs  mod.rs  post_service.rs  profile_service.rs
src/socket/: handler.rs  mod.rs  registry.rs  types.rs
src/task/: cleanup.rs  mod.rs
src/utils/: auth.rs  error.rs  hash.rs  json.rs  mod.rs  post.rs  r2endpoint.rs  roles.rs
(+10 files in other folders)
