[package]
name = "Inkvault-Backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
actix-ws = "0.3.0"
argon2 = "0.5.3"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
bson = { version = "2", features = ["chrono-0_4"] }
mongodb = "2"
serde = "1.0.219"
uuid = "1.17.0"
env_logger = "0.11.8"
log = "0.4.27"
thiserror = "2.0.12"
aws-config = "1.6.3"
aws-sdk-s3 = { version = "1.90.0", features = ["behavior-version-latest"] }
mime_guess = "2.0.5"
actix-multipart = "0.7.2"
serde_json = "1.0.140"
regex = "1.11.1"
tokio = { version = "1.46.0", features = ["full"] }
tracing-actix-web = "0.7.18"
rand = "0.9.1"
lettre = { version = "0.10.0", features = ["builder"]}
sha2 = "0.10.9"
async-trait = "0.1.88"
anyhow = "1.0.98"
redis = { version = "0.32.3", features = ["aio", "tokio-comp"] }
futures-util = "0.3.31"
dashmap = "6.1.0"
tracing = "0.1.41"
utoipa = { version = "5.4.0", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
